<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#00F2FF"
    android:id="@+id/fourPlayerActivityLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:id="@+id/fourPlayerButtonP3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/fourPlayerButtonP4"
        android:layout_toLeftOf="@+id/fourPlayerButtonP4"
        android:layout_toStartOf="@+id/fourPlayerButtonP4"
        android:background="#DE47D9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/player4"
        android:id="@+id/fourPlayerButtonP4"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/fourPlayerButtonP2"
        android:background="#E3293F"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:text="@string/player1"
        android:id="@+id/fourPlayerButtonP1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/fourPlayerButtonP2"
        android:layout_toStartOf="@+id/fourPlayerButtonP2"
        android:background="#4763DE"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/fourPlayerButtonP2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#DE8D47"
        android:layout_alignTop="@+id/fourPlayerButtonP1"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>
