<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#00F2FF"
    android:id="@+id/threePlayerActivityLayout"
    tools:context=".Three_Player_Activity">

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/threePlayerButtonP2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#DE8D47"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_above="@+id/threePlayerButtonP1"
        android:layout_toLeftOf="@+id/threePlayerButtonP3"
        android:layout_toStartOf="@+id/threePlayerButtonP3"
        android:textColor="#000000" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:id="@+id/threePlayerButtonP3"
        android:layout_alignBottom="@+id/threePlayerButtonP2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:focusable="false"
        android:background="#DE47D9"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:text="@string/player1"
        android:id="@+id/threePlayerButtonP1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#4763DE"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#000000" />
</RelativeLayout>
